--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^0.5.28+1
+  http: ^0.12.0+1
+  json_serializable: ^3.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -29,6 +31,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.9.0
+  build_runner: ^1.10.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -43,9 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - image/imagem_perfil.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
