--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   google_maps_flutter: ^0.5.28+1
   http: ^0.12.0+1
   json_serializable: ^3.3.0
+  charts_flutter: ^0.2.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - image/imagem_perfil.png
+    - image/profile_photo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
